Added register new community button to Community menu when user is logged in

--- a/etruekko/truekko/templates/truekko/groups.html
+++ b/etruekko/truekko/templates/truekko/groups.html
@@ -39,6 +39,8 @@
                 {% for k, v in filters.items %}
                     <a class="button{% if sfilter == k %} green{% endif %}" href="{% url groups k %}">{{ v.text }}</a>
                 {% endfor %}
+
+                <a class="button" href="{% url new_community_contact %}">{% trans "Register community" %}</a>
             </div>
         </div>
 
